fixed position for project elements on mobile

--- a/projectStyle.css
+++ b/projectStyle.css
@@ -84,6 +84,10 @@
         height: 40em;
     } 
 
+    .projectEle {
+       display: block;
+    }
+
     .projectEle:nth-child(1) {
         margin-top: 1em;
     }
